syntax = "proto3";

package tsv_load.proto;
option go_package = "proto";

// import "google/api/annotations.proto";

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string phone_number = 4;
}

message UserBatch {
    repeated User batch = 1;
}

message UpsertFeedback {
    bool success = 1;
    string error_message = 2;
}

message BatchFeedback {
    repeated UpsertFeedback feedbacks = 1;
}

message VersionRequest {
}

message VersionResponse {
    string version = 1;
}

service Upserter {
    rpc Upsert(UserBatch) returns (BatchFeedback) {}
    rpc Version(VersionRequest) returns (VersionResponse) {}
}